force-app/main/default/objects/SiteSetting__c/SiteSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Related Community Setting</description>
    <label>Site Setting</label>
</CustomObject>