force-app/main/default/objects/SiteSetting__c/fields/FinancialInstituteSiteUrl__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstituteSiteUrl__c</fullName>
    <description>Financial Institute Account Opening Site Url</description>
    <inlineHelpText>Financial Institute Account Opening Site Url</inlineHelpText>
    <label>Financial Institute Site Url</label>
    <type>TextArea</type>
</CustomField>