force-app/main/default/objects/SiteSetting__c/fields/FinInstSiteUrl__c.field-meta.xml
<CustomField>
    <fullName>FinInstSiteUrl__c</fullName>
    <description>Financial Institute Account Opening Site Url</description>
    <inlineHelpText
  >Financial Institute Account Opening Site Url</inlineHelpText>
    <label>Financial Institute Site Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>