force-app/main/default/objects/SiteSetting__c/fields/OnlineAccountOpeningUrl__c.field-meta.xml
<CustomField>
    <fullName>OnlineAccountOpeningUrl__c</fullName>
    <description>Online Site account opening redirect Url</description>
    <inlineHelpText>Online Site account opening redirect Url</inlineHelpText>
    <label>Online Account Opening Url</label>
    <type>TextArea</type>
</CustomField>