force-app/main/default/objects/SiteSetting__c/fields/OnlineContentUrl__c.field-meta.xml
<CustomField>
    <fullName>OnlineContentUrl__c</fullName>
    <description>Online Content Url</description>
    <inlineHelpText>Online Content Url</inlineHelpText>
    <label>Online Content Url</label>
    <type>TextArea</type>
</CustomField>