force-app/main/default/objects/SiteSetting__c/fields/OnlineSitePassword__c.field-meta.xml
<CustomField>
    <fullName>OnlineSitePassword__c</fullName>
    <description>Online Site Password for auto login</description>
    <inlineHelpText>Online Site Password for auto login</inlineHelpText>
    <label>Online Site Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>