force-app/main/default/objects/SiteSetting__c/fields/OnlineSiteUrl__c.field-meta.xml
<CustomField>
    <fullName>OnlineSiteUrl__c</fullName>
    <description>Online Account Opening Site Url</description>
    <inlineHelpText>Online Account Opening Site Url</inlineHelpText>
    <label>Online Site Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>