force-app/main/default/objects/SiteSetting__c/fields/OnlineSiteUrlPathPrefix__c.field-meta.xml
<CustomField>
    <fullName>OnlineSiteUrlPathPrefix__c</fullName>
    <description>Online Site Url Path Prefix set by Community page</description>
    <label>Online Site Url Path Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>