force-app/main/default/objects/SiteSetting__c/fields/OnlineSiteUserName__c.field-meta.xml
<CustomField>
    <fullName>OnlineSiteUserName__c</fullName>
    <description>Online Site User Name for auto login</description>
    <inlineHelpText>Online Site User Name for auto login</inlineHelpText>
    <label>Online Site User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>